--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<meta HTTP-Equiv="Refresh" content="0; URL=https://github.com/leifjacobson/MLFF_test_data">
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://github.com/leifjacobson/MLFF_test_data>
+<meta http-equiv="refresh" content="0; URL=https://github.com/leifjacobson/MLFF_test_data">
+<link rel="canonical" href="https://github.com/leifjacobson/MLFF_test_data">
